--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,3 +13,19 @@ jobs:
           go-version: 1.18
       - run: go test
       - run: go run math.go
+
+      #gerando build da images do docker
+
+      # instalando docker no runner do github
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: false
+          tags: lucas6g/go-ci:latest
